# fann-rs

./: .travis.yml  Cargo.toml  README.md
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: activation_func.rs  cascade_params.rs  error.rs  error_func.rs  lib.rs  net_type.rs  stop_func.rs  train_algorithm.rs  train_data.rs
